# MatSoC

./: ComplexMag.cpp  DMAMatcalc.cpp  DMAsimpleTransfer.cpp  Soham_SoC.ipynb  TB_ComplexMag.cpp  Trial1.cpp  Trial2.cpp  header_ComplexMag.h
BitStreams/: ComplexMag291.bit  ComplexMag291.hwh  ComplexMag301.bit  ComplexMag301.hwh  MotorFatigue_PYNQZ2.bit  MotorFatigue_PYNQZ2.hwh  SelfStatCalc1702.bit  SelfStatCalc1702.hwh  blk_pass.bit  blk_pass.hwh  design_3.bit  design_3.hwh
DMAnParkMul/: DMAnParkMul.xpr
DMAnParkMul/DMAnParkMul.cache/wt/: synthesis.wdf  webtalk_pa.xml
DMAnParkMul/DMAnParkMul.ip_user_files/mem_init_files/: DMAnParkMat.bda  pack_stream_to_blk.mdd  pack_stream_to_blk.tcl  pack_stream_to_blk.yaml  unpack_blk_to_stream.tcl
DMAnParkMul/DMAnParkMul.runs/.jobs/: vrs_config_1.xml  vrs_config_11.xml  vrs_config_12.xml  vrs_config_13.xml  vrs_config_14.xml  vrs_config_15.xml  vrs_config_16.xml  vrs_config_17.xml  vrs_config_18.xml  vrs_config_19.xml  vrs_config_2.xml  vrs_config_20.xml  vrs_config_22.xml  vrs_config_23.xml  vrs_config_24.xml  vrs_config_25.xml  vrs_config_4.xml  vrs_config_5.xml  vrs_config_7.xml  vrs_config_8.xml  vrs_config_9.xml
IPs/auto_parkcalc/: component.xml
IPs/auto_parkcalc/xgui/: auto_parkcalc_v1_0.tcl
IPs/calculate_statistics/: component.xml
IPs/complex_mag_stream/: component.xml
IPs/pack_stream_to_blk/: component.xml
IPs/subtract_mean/: component.xml
IPs/subtract_mean/drivers/subtract_mean_v1_0/src/: CMakeLists.txt  Makefile  xsubtract_mean.c  xsubtract_mean.h  xsubtract_mean_hw.h  xsubtract_mean_linux.c  xsubtract_mean_sinit.c
IPs/unpack_blk_to_stream/: component.xml
Jupyter/: BlkPass.ipynb  Matrix.ipynb  MotorFatigue.ipynb  SW_Time.ipynb  SimpleTransfer.ipynb
PYNQZ2/MotorFatigue/: compile_commands.json  hls_config.cfg  vitis-comp.json
PYNQZ2/MotorFatigue/pack_stream_to_blk/: pack_stream_to_blk.hlscompile_summary  pack_stream_to_blk.hlsrun_package_summary
PYNQZ2/MotorFatigue/pack_stream_to_blk/hls/impl/ip/drivers/calculate_statistics_v1_0/src/: CMakeLists.txt  xcalculate_statistics.h
PYNQZ2/_ide/: .peers.ini  settings.json  workspace_journal.py  workspace_journal_9062.py
PYNQZ2_IPs/auto_parkcalc_two_streams/: component.xml
PYNQZ2_IPs/calculate_statistics/: component.xml
PYNQZ2_IPs/complex_mag_stream/: component.xml
PYNQZ2_IPs/pack_stream_to_blk/: component.xml
PYNQZ2_IPs/unpack_blk_to_stream/: component.xml
PYNQZ2_IPs/zero_cross/: component.xml
PYNQZ2_VIVADO/: MotorFault_PYNQZ2.xpr
PYNQZ2_VIVADO/MotorFault_PYNQZ2.cache/wt/: synthesis.wdf  webtalk_pa.xml
PYNQZ2_VIVADO/MotorFault_PYNQZ2.gen/sources_1/bd/MotorFatigue_PYNQZ2/ip/MotorFatigue_PYNQZ2_pack_stream_to_blk_0_0/drivers/pack_stream_to_blk_v1_0/src/: CMakeLists.txt
PYNQZ2_VIVADO/MotorFault_PYNQZ2.gen/sources_1/bd/MotorFatigue_PYNQZ2/ip/MotorFatigue_PYNQZ2_zero_cross_0_0/drivers/zero_cross_v1_0/src/: CMakeLists.txt  xzero_cross_hw.h  xzero_cross_sinit.c
PYNQZ2_VIVADO/MotorFault_PYNQZ2.ip_user_files/mem_init_files/: auto_parkcalc_two_streams.tcl
PYNQZ2_VIVADO/MotorFault_PYNQZ2.runs/.jobs/: vrs_config_1.xml  vrs_config_2.xml  vrs_config_3.xml
PYNQZ2_VIVADO/MotorFault_PYNQZ2.runs/MotorFatigue_PYNQZ2_auto_parkcalc_two_st_0_0_synth_1/: .vivado.begin.rst  MotorFatigue_PYNQZ2_auto_parkcalc_two_st_0_0.tcl  MotorFatigue_PYNQZ2_auto_parkcalc_two_st_0_0.vds  MotorFatigue_PYNQZ2_auto_parkcalc_two_st_0_0_utilization_synth.pb  MotorFatigue_PYNQZ2_auto_parkcalc_two_st_0_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
PYNQZ2_VIVADO/MotorFault_PYNQZ2.runs/MotorFatigue_PYNQZ2_axi_dma_0_0_synth_1/: .vivado.begin.rst  MotorFatigue_PYNQZ2_axi_dma_0_0.tcl  MotorFatigue_PYNQZ2_axi_dma_0_0.vds  MotorFatigue_PYNQZ2_axi_dma_0_0_utilization_synth.pb  MotorFatigue_PYNQZ2_axi_dma_0_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
PYNQZ2_VIVADO/MotorFault_PYNQZ2.runs/MotorFatigue_PYNQZ2_axi_dma_1_0_synth_1/: .vivado.begin.rst  MotorFatigue_PYNQZ2_axi_dma_1_0.tcl  MotorFatigue_PYNQZ2_axi_dma_1_0.vds  MotorFatigue_PYNQZ2_axi_dma_1_0_utilization_synth.pb  MotorFatigue_PYNQZ2_axi_dma_1_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
PYNQZ2_VIVADO/MotorFault_PYNQZ2.runs/MotorFatigue_PYNQZ2_axi_dma_2_0_synth_1/: .vivado.begin.rst  MotorFatigue_PYNQZ2_axi_dma_2_0.dcp  MotorFatigue_PYNQZ2_axi_dma_2_0.tcl  MotorFatigue_PYNQZ2_axi_dma_2_0.vds  dont_touch.xdc  gen_run.xml  htr.txt  project.wdf  rundef.js  runme.sh  vivado.jou  vivado.pb
PYNQZ2_VIVADO/MotorFault_PYNQZ2.runs/MotorFatigue_PYNQZ2_axi_mem_intercon_1_imp_auto_pc_0_synth_1/: .vivado.begin.rst  MotorFatigue_PYNQZ2_axi_mem_intercon_1_imp_auto_pc_0.tcl  MotorFatigue_PYNQZ2_axi_mem_intercon_1_imp_auto_pc_0.vds  MotorFatigue_PYNQZ2_axi_mem_intercon_1_imp_auto_pc_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
PYNQZ2_VIVADO/MotorFault_PYNQZ2.runs/MotorFatigue_PYNQZ2_axi_mem_intercon_1_imp_auto_us_0_synth_1/: .vivado.begin.rst  MotorFatigue_PYNQZ2_axi_mem_intercon_1_imp_auto_us_0.dcp  MotorFatigue_PYNQZ2_axi_mem_intercon_1_imp_auto_us_0.tcl  MotorFatigue_PYNQZ2_axi_mem_intercon_1_imp_auto_us_0.vds  MotorFatigue_PYNQZ2_axi_mem_intercon_1_imp_auto_us_0_utilization_synth.pb  MotorFatigue_PYNQZ2_axi_mem_intercon_1_imp_auto_us_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  (+3 more)
SoCExtraFeatures_VIVADO/DMA/: DMA.xpr
SoC_wsHLS/.theia/: settings.json
SoC_wsHLS/.wsdata/: clang_dir_map.json
SoC_wsHLS/SoC_hls_component/: compile_commands.json  hls_config.cfg  vitis-comp.json
SoC_wsHLS/SoC_hls_component/SoC_hls_component/hls/.autopilot/db/driver/src/: CMakeLists.txt  xunpack_blk_to_stream.h
src/: DataTypes.h  H_L2_1.csv  MatCalc.cpp  MatrixComplex.cpp  SoCStattistics.cpp  StatsCalc.cpp  StreamConverters.cpp  ZeroCross.cpp  dimensions.h  tb.cpp
src_copy/: ComplexMag.cpp  CoresV2.cpp  Stats.cpp  ZeroCross.cpp  header_ComplexMag.h
testbenches/: TB_ComplexMag.cpp
(+3002 files in other folders)
